# stdg

./: .gitignore  Cargo.toml  README.md
docs/: byzanz-record-window.sh
examples/: rectangle.py  simple.py  simple.txt
playground/: basic.go  basic.js  basic.py  basic.txt
src/: main.rs
